--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <ul id="commits-list"></ul>
 <script>
-fetch('https://api.github.com/repos/<username>/<repo>/commits')
+fetch('https://api.github.com/repos/Flex01a/beta.animeAI/commits')
   .then(response => response.json())
   .then(data => {
     // process the data and create HTML list items
