--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
   <script>
     // Fetch the commits data from GitHub API
-    fetch('https://api.github.com/repos/<username>/<repo>/commits')
+    fetch('https://api.github.com/repos/Flex01a/beta.animeAi/commits')
       .then(response => response.json())
       .then(data => {
         // Process the data and create HTML list items
